--- a/WordPress/trunk/modules/wordpress/wp-mail-conf.php.dist
+++ b/WordPress/trunk/modules/wordpress/wp-mail-conf.php.dist
@@ -1,4 +1,5 @@
 <?php
 /* Don't remove this line */ $_my_ext_=pathinfo(__FILE__);if ($_my_ext_['extension']!="php") exit;
 $exec_key = '';
+// $img_target = '_blank';
 ?>
