SNAP for Release 0.5.0 RC2

--- a/WordPress/branches/Branch_0_5_0_Beta/modules/wordpress/wp-mail-conf.php.dist
+++ b/WordPress/branches/Branch_0_5_0_Beta/modules/wordpress/wp-mail-conf.php.dist
@@ -1,5 +1,5 @@
 <?php
 /* Don't remove this line */ $_my_ext_=pathinfo(__FILE__);if ($_my_ext_['extension']!="php") exit;
-$exec_key = '';
-// $img_target = '_blank';
+$GLOBALS['exec_key'] = '';
+// $GLOBALS['img_target'] = '_blank';
 ?>
